--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-particles-js": "^3.4.1",
-    "react-redux": "^7.2.0",
-    "reactstrap": "^8.9.0"
+    "react-redux": "^7.2.0"
   },
   "license": "MIT",
   "devDependencies": {
