--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/system": "^4.11.3",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.21.1",
+    "axios-auth-refresh": "^3.1.0",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
