--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.8.4",
     "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.0"
   },
