--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
+    "jwt-decode": "^3.1.2",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
