--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
     "jwt-decode": "^3.1.2",
-    "next": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^10.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.4",
     "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.0"
