--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/system": "^4.11.3",
+    "@material-ui/lab": "^5.0.0-alpha.39",
+    "@material-ui/styles": "^5.0.0-beta.0",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
