--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/core": "5.0.0-beta.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^5.0.0-alpha.39",
-    "@material-ui/styles": "^5.0.0-beta.0",
+    "@material-ui/lab": "5.0.0-alpha.43",
+    "@material-ui/styles": "5.0.0-beta.4",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
@@ -32,14 +32,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/node": "16.6.1",
-    "@types/react": "17.0.17",
+    "@types/node": "16.6.2",
+    "@types/react": "17.0.18",
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.18",
     "jest": "^27.0.6",
     "jest-css-modules-transform": "^4.3.0",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "4.3.5"
   },
   "author": "c43721",
