--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "5.0.0-beta.4",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/icons": "^5.0.0-beta.4",
     "@material-ui/lab": "5.0.0-alpha.43",
     "@material-ui/styles": "5.0.0-beta.4",
     "@node-steam/id": "^1.2.0",
