--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
     "@material-ui/lab": "5.0.0-alpha.43",
     "@material-ui/styles": "5.0.0-beta.4",
     "@node-steam/id": "^1.2.0",
-    "@reduxjs/toolkit": "^1.6.1",
-    "axios": "0.21.3",
-    "axios-auth-refresh": "^3.1.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
+    "axios-auth-refresh": "^3.2.1",
     "jwt-decode": "^3.1.2",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.14.2",
-    "react-query": "^3.21.1",
+    "react-hook-form": "^7.17.2",
+    "react-query": "^3.26.0",
     "react-redux": "^7.2.5",
-    "react-tsparticles": "^1.34.0"
+    "react-tsparticles": "^1.35.4"
   },
   "license": "MIT",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "16.7.10",
-    "@types/react": "17.0.19",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.3.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "16.10.4",
+    "@types/react": "17.0.29",
     "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.18",
-    "jest": "^27.1.0",
+    "@types/react-redux": "7.1.19",
+    "jest": "^27.2.5",
     "jest-css-modules-transform": "^4.3.0",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "4.4.2"
+    "ts-node": "^10.3.0",
+    "typescript": "4.4.4"
   },
   "author": "c43721",
   "bugs": {
